@@ -24,8 +24,6 @@ import org.apache.kafka.image.MetadataProvenance;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -41,14 +39,14 @@ public final class BrokerServerMetricsTest {
         String expectedGroup = "broker-metadata-metrics";
 
         // Metric description is not use for metric name equality
-        Set<MetricName> expectedMetrics = new HashSet<>(Arrays.asList(
+        Set<MetricName> expectedMetrics = Set.of(
                 new MetricName("last-applied-record-offset", expectedGroup, "", Map.of()),
                 new MetricName("last-applied-record-timestamp", expectedGroup, "", Map.of()),
                 new MetricName("last-applied-record-lag-ms", expectedGroup, "", Map.of()),
                 new MetricName("metadata-load-error-count", expectedGroup, "", Map.of()),
                 new MetricName("metadata-apply-error-count", expectedGroup, "", Map.of()),
                 new MetricName("ignored-static-voters", expectedGroup, "", Map.of())
-        ));
+        );
 
         try (BrokerServerMetrics ignored = new BrokerServerMetrics(metrics)) {
             Map<MetricName, KafkaMetric> metricsMap = metrics.metrics().entrySet().stream()
